[tool.poetry]
name = "dnd-converter"
version = "0.1.0"
description = ""
authors = ["Tomas Landberg <tomas.landberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.11.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-pylint = "^0.18.0"
pytest-flake8 = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
